fixed text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header {
-    margin-bottom: 20%;
+    margin-bottom: 18%;
     margin-top: 1%;
     
 
